--- a/index.html
+++ b/index.html
@@ -21,5 +21,10 @@
 </head>
 <body>
   <h1>Hello world</h1>
+  <f24-form identifier="acd18453-792f-470f-b187-f2b509f5e1ba" style="display: block;">
+    <img style="width:100px; height:100px;"
+         src="https://static.websites.data-crypt.com/resources/images/website-embedded-form-loading-indicator.gif"
+         alt="Loading"/>
+  </f24-form>
 </body>
 </html>
